# audio_notes

./: .gitignore  CMakeLists.txt  тестовое_задание_аудиозаметки.txt
db/: 1678645649033.audionote
resources/: qml.qrc
resources/qml/: AudioNoteCreationPanel.qml  AudioNotesListView.qml  AudioTrackView.qml  RepositoryListView.qml  main.qml
src/: AudioNote.cpp  AudioNote.h  AudioNoteCreator.cpp  AudioNoteCreator.h  AudioNotePlayback.cpp  AudioNotePlayback.h  AudioNotesApp.cpp  AudioNotesApp.h  AudioNotesModel.cpp  AudioNotesModel.h  AudioNotesRepo.cpp  AudioNotesRepo.h  AudioNotesReposModel.cpp  AudioNotesReposModel.h  Scanner.cpp  Scanner.h  main.cpp
